/**
 * Trigger Tests for azure-cost-forecast
 *
 * Tests that verify the skill triggers on appropriate prompts
 * and does NOT trigger on unrelated prompts.
 */

import { TriggerMatcher } from "../utils/trigger-matcher";
import { loadSkill, LoadedSkill } from "../utils/skill-loader";

const SKILL_NAME = "azure-cost-forecast";

describe(`${SKILL_NAME} - Trigger Tests`, () => {
  let triggerMatcher: TriggerMatcher;
  let skill: LoadedSkill;

  beforeAll(async () => {
    skill = await loadSkill(SKILL_NAME);
    triggerMatcher = new TriggerMatcher(skill);
  });

  describe("Should Trigger", () => {
    const shouldTriggerPrompts: string[] = [
      "What will my Azure costs be next month?",
      "Forecast my Azure spending for the rest of the quarter",
      "Predict my subscription costs for the next 90 days",
      "Show me projected costs for this billing period",
      "Estimate my Azure bill for next month",
      "How much will I spend on Azure by end of year?",
      "Show my forecast for Azure costs going forward",
    ];

    test.each(shouldTriggerPrompts)(
      'triggers on: "%s"',
      (prompt) => {
        const result = triggerMatcher.shouldTrigger(prompt);
        expect(result.triggered).toBe(true);
      }
    );
  });

  describe("Should NOT Trigger", () => {
    const shouldNotTriggerPrompts: string[] = [
      // Query skill (should not trigger cost-forecast)
      "Analyze actual and amortized cost trends by service",
      "What is my amortized cost trend this year?",
      // Optimization skill (should not trigger cost-forecast)
      "Find orphaned resources and rightsize VMs",
      "Reduce waste and optimize cloud expenses",
      // Deployment (different skill)
      "Deploy a new VM to Azure",
      // Wrong cloud provider
      "Set up an AWS budget",
      // Unrelated
      "Write a Python script",
    ];

    test.each(shouldNotTriggerPrompts)(
      'does not trigger on: "%s"',
      (prompt) => {
        const result = triggerMatcher.shouldTrigger(prompt);
        expect(result.triggered).toBe(false);
      }
    );
  });

  describe("Trigger Keywords Snapshot", () => {
    test("skill keywords match snapshot", () => {
      expect(triggerMatcher.getKeywords()).toMatchSnapshot();
    });

    test("skill description triggers match snapshot", () => {
      expect({
        name: skill.metadata.name,
        description: skill.metadata.description,
        extractedKeywords: triggerMatcher.getKeywords()
      }).toMatchSnapshot();
    });
  });

  describe("Edge Cases", () => {
    test("handles empty prompt", () => {
      const result = triggerMatcher.shouldTrigger("");
      expect(result.triggered).toBe(false);
    });

    test("handles very long prompt", () => {
      const longPrompt = "Azure cost forecast spending ".repeat(500);
      const result = triggerMatcher.shouldTrigger(longPrompt);
      expect(typeof result.triggered).toBe("boolean");
    });

    test("is case insensitive", () => {
      const result1 = triggerMatcher.shouldTrigger("FORECAST AZURE COSTS");
      const result2 = triggerMatcher.shouldTrigger("forecast azure costs");
      expect(result1.triggered).toBe(result2.triggered);
    });
  });
});
