// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-cost-forecast - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Forecast future Azure costs using the Cost Management Forecast API. Builds and executes forecast requests with proper time-period guardrails, training-data validation, and response interpretation. WHEN: forecast Azure costs, predict spending, projected costs, estimate bill, future Azure costs, cost projection, budget forecast, end of month costs, how much will I spend. DO NOT USE FOR: querying historical costs (use azure-cost-query), reducing costs (use azure-cost-optimization).",
  "extractedKeywords": [
    "azure",
    "azure-cost-optimization",
    "azure-cost-query",
    "bill",
    "budget",
    "builds",
    "cli",
    "cost",
    "costs",
    "estimate",
    "executes",
    "forecast",
    "function",
    "future",
    "guardrails",
    "historical",
    "interpretation",
    "management",
    "mcp",
    "month",
    "much",
    "predict",
    "projected",
    "projection",
    "proper",
    "querying",
    "reducing",
    "requests",
    "response",
    "spend",
    "spending",
    "time-period",
    "training-data",
    "using",
    "validation",
    "when",
    "will",
    "with",
  ],
  "name": "azure-cost-forecast",
}
`;

exports[`azure-cost-forecast - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "azure",
  "azure-cost-optimization",
  "azure-cost-query",
  "bill",
  "budget",
  "builds",
  "cli",
  "cost",
  "costs",
  "estimate",
  "executes",
  "forecast",
  "function",
  "future",
  "guardrails",
  "historical",
  "interpretation",
  "management",
  "mcp",
  "month",
  "much",
  "predict",
  "projected",
  "projection",
  "proper",
  "querying",
  "reducing",
  "requests",
  "response",
  "spend",
  "spending",
  "time-period",
  "training-data",
  "using",
  "validation",
  "when",
  "will",
  "with",
]
`;
